// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Header in Zone Screen Renders Location Header In Zone Screen 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "borderBottomColor": "#eeeeee",
      "borderBottomWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginHorizontal": 0,
      "padding": 14,
    }
  }
>
  <View>
    <Text>
      [missing "en.GENERICS.CLUB" translation] 5522
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      35 [missing "en.LOCATION.ZONES" translation]
    </Text>
  </View>
</View>
`;

exports[`Test Location Header in Zone Screen Renders Print Label button if Screen is 'SectionDetails'  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "borderBottomColor": "#eeeeee",
      "borderBottomWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginHorizontal": 0,
      "padding": 14,
    }
  }
>
  <View>
    <Text>
      [missing "en.GENERICS.CLUB" translation] 5522
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      35 [missing "en.LOCATION.ZONES" translation]
    </Text>
  </View>
  <TouchableOpacity
    activeOpacity={0.2}
    delayLongPress={600}
    extraButtonProps={
      Object {
        "rippleColor": "transparent",
      }
    }
    onPress={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#0071e9",
        }
      }
    >
      [missing "en.PRINT.PRINT_LABEL" translation]
    </Text>
  </TouchableOpacity>
</View>
`;
